--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,61 @@
 .main-contaiener {
   width: 100%;
-  height: 100%;
-  border-radius: 20px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  gap: 16px;
+  justify-content: space-between;
+  background-color: #24272a;
+  color: #d6d9dc;
 }
+
+header {
+  background: #141618;
+  color: #d6d9dc;
+  padding: 12px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+}
+
+.logo {
+  height: 32px;
+  width: 32px;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  margin: 0;
+  font-size: 22px;
+}
+
+footer {
+  width: 100%;
+  padding: 12px;
+  background-color: #24272a;
+  text-align: center;
+}
+
+a {
+  color: #1098fc;
+  text-decoration: none;
+}
+
+.fullScreenTab {
+  width: 100%;
+  height: 100%;
+  background: #24272a;
+}
+
+.tabBox {
+  box-shadow: -2px 2px 4px 0 #00000080;
+  width: 100%;
+  z-index: 1
+}
+
