--- a/frontend/src/CheckNftSecurity.css
+++ b/frontend/src/CheckNftSecurity.css
@@ -1,13 +1,13 @@
 .check-nft-security {
-    min-height: 60px;
-    width: 90%;
+    width: 100%;
+    height: 280px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 8px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 8px;
+    color: #d6d9dc;
   }
 
   .bold {
@@ -16,7 +16,7 @@
 
   .nft-result-security {
     width: 90%;
-    min-height: 30px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 12px;
