--- a/frontend/src/CheckSiteSecurity.css
+++ b/frontend/src/CheckSiteSecurity.css
@@ -1,19 +1,19 @@
 .check-site-security {
-    min-height: 60px;
-    width: 90%;
+    height: 280px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     gap: 8px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 8px;
+    color: #d6d9dc;
 }
 
 
 .result-security {
   width: 90%;
-  min-height: 30px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 12px;
