--- a/frontend/src/CheckSiteSecurity.css
+++ b/frontend/src/CheckSiteSecurity.css
@@ -23,3 +23,33 @@
 .result-security p {
     font-size: 14px;
 }
+
+
+
+.list-container li {
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.list-container li:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.list-container li:nth-child(2) {
+  animation-delay: 0.3s;
+}
+
+.list-container li:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+/* Adjust the animation-delay values as per your desired delay */
